<resources>
    <string name="app_name">FMParty</string>

    <string name="facebook_app_id">1181836061843253</string>
    <string name="chat_title">Chat Title</string>
    <string name="mob_detail_title">Mob detail</string>
    <string name="profile_title">Profile</string>
    <string name="profile_banner_id">ca-app-pub-5890922104857953/3557254222</string>
    <string name="chat_banner_id">ca-app-pub-5890922104857953/9348912625</string>

    <string name="action_settings">Settings</string>
    <string name="action_open_profile">My Profile</string>
    <string name="action_logout">Logout</string>

    <string name="action_chat_info">Chat info</string>
    <string name="action_leave_chat">Leave chat</string>

    <string name="allow_sound_summary">You can turn off a sound when you get a new messages.</string>
    <string name="allow_sound_title">Allow sound</string>
    <string name="settings_title">Settings</string>
    <string name="language_title">Language</string>
    <string name="language_summary">You can change interface language</string>
    <string name="myListTitle">My Mobs</string>
    <string name="createMobTitle">Create Mob</string>
    <string name="findMobTitle">Find Mob</string>
    <string name="send">Send</string>
    <string name="titleStr">Title</string>
    <string name="descrStr">Descr</string>
    <string name="dateStr">Date</string>
    <string name="cityStr">City</string>
    <string name="joinFMBStr">Join FlashMob!</string>
    <string name="profileNameStr">Profile Name</string>
    <string name="userNameStr">User Name</string>
    <string name="enterMobName">Enter Mob name:</string>
    <string name="selectChatImage">Select Chat Image</string>
    <string name="changeAvatar">Select Profile Image</string>
    <string name="updateProfile">Update Profile</string>
    <string name="useDate">Use date?</string>
    <string name="loginVK">Sign in with Vkontakte</string>
    <string name="loginFB">Sign in with Facebook</string>
    <string name="msgStr">Message Text</string>
    <string name="enterMessage">Enter your message</string>
    <string name="confirmLeaveChat">Are you sure you want to leave this chat?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profileDescHint">Enter Description</string>
    <string name="enter_chat_name">Enter Chat Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="updateChat">Update Chat</string>
    <string name="err_empty_msg">Message is empty</string>
    <string name="msg_mob_created">Встреча создана!</string>
    <string name="msg_app_loading">Please wait. Application is loading</string>
    <string name="msg_profile_updated">Profile has been updated!</string>
    <string name="msg_joined_mob">Successfully joined! Refresh your mob\'s list!</string>
    <string name="msg_no_results">No results</string>

    <color name="indigo_blue_ultralight">#C5CAE9</color>
    <color name="indigo_blue_mediumlight">#9FA8DA</color>
    <color name="indigo_blue_light">#5C6BC0</color>
    <color name="indigo_blue">#3B5998</color>
    <color name="indigo_blue_dark">#1A237E</color>
    <color name="white">#FFF</color>
    <color name="gray">#A9A9A9</color>
</resources>
