<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:focusable="true" android:focusableInTouchMode="true"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp" android:background="@color/white">

    <EditText
        android:id="@+id/profileName"
        android:text="@string/profileNameStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/default_userpic"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:longClickable="false"
        android:layout_below="@+id/profileName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/profileDesc"
        android:layout_width="wrap_content"
        android:hint="@string/profileDescHint"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profileImage"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/selectImageButton"
        android:text="@string/changeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileDesc"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/updateProfileButton"
        android:text="@string/updateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/selectImageButton"
        android:layout_marginTop="10dp"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/profile_banner_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>